Fix overlapping scrollbar

--- a/frontend/scss/global/base.scss
+++ b/frontend/scss/global/base.scss
@@ -21,6 +21,13 @@ body {
   touch-action: manipulation;
 }
 
+#app {
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+}
+
 main {
   margin-top: 10px;
 
